--- a/Pedro_Henrique_Desafio_Modulo1.ipynb
+++ b/Pedro_Henrique_Desafio_Modulo1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "https://github.com/p3dr3nriqu3/boocamp_alura/blob/main/Pedro_Henrique_Desafio_Modulo1.ipynb",
-      "authorship_tag": "ABX9TyOXoOhva03WgIoiOD3YtvM4",
+      "authorship_tag": "ABX9TyOj/P5+ymMjlyv/U8Gc6UGh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,7 +121,13 @@
       },
       "source": [
         "#Lendo a base covid-19 que está em \"Definição do Projeto\".\n",
-        "dados = pd.read_csv(url) \n"
+        "dados = pd.read_csv(url,\n",
+        "        encoding=\"ISO-8859-1\", \n",
+        "        parse_dates=['date'],                         \n",
+        "        engine='python',\n",
+        "        sep=\",\",                              \n",
+        "        thousands=\",\",\n",
+        "        decimal=\".\") \n"
       ],
       "execution_count": 4,
       "outputs": []
@@ -132,9 +138,9 @@
         "id": "45Xp4NySVZrO",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 316
+          "height": 299
         },
-        "outputId": "a5a9cb56-1869-4f02-aee6-4e8ea6b9a84b"
+        "outputId": "dde34f4e-09f2-4c48-ff29-51f5bcf52240"
       },
       "source": [
         "#Uma pequena visualização aleatória para conhecer a base e suas variáveis.\n",
@@ -181,96 +187,96 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>879941</th>\n",
-              "      <td>2020-05-03</td>\n",
+              "      <th>515555</th>\n",
+              "      <td>2020-11-02</td>\n",
+              "      <td>PE</td>\n",
+              "      <td>Cupira</td>\n",
+              "      <td>city</td>\n",
+              "      <td>960</td>\n",
+              "      <td>29</td>\n",
+              "      <td>196</td>\n",
+              "      <td>False</td>\n",
+              "      <td>24,107.00</td>\n",
+              "      <td>24,173.00</td>\n",
+              "      <td>2,605,004.00</td>\n",
+              "      <td>3,971.37</td>\n",
+              "      <td>0.03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>868188</th>\n",
+              "      <td>2020-08-15</td>\n",
               "      <td>SP</td>\n",
-              "      <td>Chavantes</td>\n",
+              "      <td>Bebedouro</td>\n",
               "      <td>city</td>\n",
-              "      <td>1</td>\n",
+              "      <td>390</td>\n",
+              "      <td>21</td>\n",
+              "      <td>131</td>\n",
+              "      <td>False</td>\n",
+              "      <td>77,496.00</td>\n",
+              "      <td>77,555.00</td>\n",
+              "      <td>3,506,102.00</td>\n",
+              "      <td>502.87</td>\n",
+              "      <td>0.05</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>911283</th>\n",
+              "      <td>2020-07-22</td>\n",
+              "      <td>SP</td>\n",
+              "      <td>Laranjal Paulista</td>\n",
+              "      <td>city</td>\n",
+              "      <td>172</td>\n",
+              "      <td>4</td>\n",
+              "      <td>106</td>\n",
+              "      <td>False</td>\n",
+              "      <td>28,516.00</td>\n",
+              "      <td>28,785.00</td>\n",
+              "      <td>3,526,407.00</td>\n",
+              "      <td>597.53</td>\n",
+              "      <td>0.02</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>863339</th>\n",
+              "      <td>2020-05-02</td>\n",
+              "      <td>SP</td>\n",
+              "      <td>AreiÃ³polis</td>\n",
+              "      <td>city</td>\n",
+              "      <td>4</td>\n",
               "      <td>0</td>\n",
-              "      <td>13</td>\n",
-              "      <td>False</td>\n",
-              "      <td>12,418.00</td>\n",
-              "      <td>12,418.00</td>\n",
-              "      <td>3,557,204.00</td>\n",
-              "      <td>8.05</td>\n",
-              "      <td>0.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>648186</th>\n",
-              "      <td>2020-07-31</td>\n",
-              "      <td>RR</td>\n",
-              "      <td>São Luiz</td>\n",
-              "      <td>city</td>\n",
-              "      <td>178</td>\n",
-              "      <td>2</td>\n",
-              "      <td>102</td>\n",
-              "      <td>False</td>\n",
-              "      <td>7,986.00</td>\n",
-              "      <td>8,110.00</td>\n",
-              "      <td>1,400,605.00</td>\n",
-              "      <td>2,194.82</td>\n",
-              "      <td>0.01</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>189057</th>\n",
-              "      <td>2020-05-14</td>\n",
-              "      <td>BA</td>\n",
-              "      <td>Paulo Afonso</td>\n",
-              "      <td>city</td>\n",
               "      <td>10</td>\n",
-              "      <td>0</td>\n",
-              "      <td>24</td>\n",
               "      <td>False</td>\n",
-              "      <td>117,782.00</td>\n",
-              "      <td>118,516.00</td>\n",
-              "      <td>2,924,009.00</td>\n",
-              "      <td>8.44</td>\n",
+              "      <td>11,129.00</td>\n",
+              "      <td>11,158.00</td>\n",
+              "      <td>3,503,604.00</td>\n",
+              "      <td>35.85</td>\n",
               "      <td>0.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>345010</th>\n",
-              "      <td>2020-07-17</td>\n",
+              "      <th>309667</th>\n",
+              "      <td>2020-09-04</td>\n",
               "      <td>PB</td>\n",
-              "      <td>São José de Espinharas</td>\n",
-              "      <td>city</td>\n",
-              "      <td>12</td>\n",
-              "      <td>0</td>\n",
-              "      <td>77</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>state</td>\n",
+              "      <td>108925</td>\n",
+              "      <td>2517</td>\n",
+              "      <td>177</td>\n",
               "      <td>False</td>\n",
-              "      <td>4,682.00</td>\n",
-              "      <td>4,656.00</td>\n",
-              "      <td>2,514,404.00</td>\n",
-              "      <td>257.73</td>\n",
-              "      <td>0.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>854028</th>\n",
-              "      <td>2020-09-29</td>\n",
-              "      <td>SC</td>\n",
-              "      <td>Vargem</td>\n",
-              "      <td>city</td>\n",
-              "      <td>78</td>\n",
-              "      <td>1</td>\n",
-              "      <td>137</td>\n",
-              "      <td>False</td>\n",
-              "      <td>2,477.00</td>\n",
-              "      <td>2,432.00</td>\n",
-              "      <td>4,219,150.00</td>\n",
-              "      <td>3,207.24</td>\n",
-              "      <td>0.01</td>\n",
+              "      <td>4,018,127.00</td>\n",
+              "      <td>4,039,277.00</td>\n",
+              "      <td>25.00</td>\n",
+              "      <td>2,696.65</td>\n",
+              "      <td>0.02</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "              date state  ... confirmed_per_100k_inhabitants death_rate\n",
-              "879941  2020-05-03    SP  ...                           8.05       0.00\n",
-              "648186  2020-07-31    RR  ...                       2,194.82       0.01\n",
-              "189057  2020-05-14    BA  ...                           8.44       0.00\n",
-              "345010  2020-07-17    PB  ...                         257.73       0.00\n",
-              "854028  2020-09-29    SC  ...                       3,207.24       0.01\n",
+              "             date state  ... confirmed_per_100k_inhabitants death_rate\n",
+              "515555 2020-11-02    PE  ...                       3,971.37       0.03\n",
+              "868188 2020-08-15    SP  ...                         502.87       0.05\n",
+              "911283 2020-07-22    SP  ...                         597.53       0.02\n",
+              "863339 2020-05-02    SP  ...                          35.85       0.00\n",
+              "309667 2020-09-04    PB  ...                       2,696.65       0.02\n",
               "\n",
               "[5 rows x 13 columns]"
             ]
@@ -289,7 +295,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9fb3e0d6-b568-4a76-aba6-b74809cbf491"
+        "outputId": "e5ed6c9b-c408-4056-c957-016791c502ab"
       },
       "source": [
         "#Existem informações nulas no dataset de acordo com info, nos campos: city, estimated_population_2019, etimated_population, city_ibge_code and confirmed_per_100k_inhabitants.\n",
@@ -303,22 +309,22 @@
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 974824 entries, 0 to 974823\n",
             "Data columns (total 13 columns):\n",
-            " #   Column                          Non-Null Count   Dtype  \n",
-            "---  ------                          --------------   -----  \n",
-            " 0   date                            974824 non-null  object \n",
-            " 1   state                           974824 non-null  object \n",
-            " 2   city                            968230 non-null  object \n",
-            " 3   place_type                      974824 non-null  object \n",
-            " 4   confirmed                       974824 non-null  int64  \n",
-            " 5   deaths                          974824 non-null  int64  \n",
-            " 6   order_for_place                 974824 non-null  int64  \n",
-            " 7   is_last                         974824 non-null  bool   \n",
-            " 8   estimated_population_2019       971052 non-null  float64\n",
-            " 9   estimated_population            971052 non-null  float64\n",
-            " 10  city_ibge_code                  971052 non-null  float64\n",
-            " 11  confirmed_per_100k_inhabitants  957481 non-null  float64\n",
-            " 12  death_rate                      974824 non-null  float64\n",
-            "dtypes: bool(1), float64(5), int64(3), object(4)\n",
+            " #   Column                          Non-Null Count   Dtype         \n",
+            "---  ------                          --------------   -----         \n",
+            " 0   date                            974824 non-null  datetime64[ns]\n",
+            " 1   state                           974824 non-null  object        \n",
+            " 2   city                            968230 non-null  object        \n",
+            " 3   place_type                      974824 non-null  object        \n",
+            " 4   confirmed                       974824 non-null  int64         \n",
+            " 5   deaths                          974824 non-null  int64         \n",
+            " 6   order_for_place                 974824 non-null  int64         \n",
+            " 7   is_last                         974824 non-null  bool          \n",
+            " 8   estimated_population_2019       971052 non-null  float64       \n",
+            " 9   estimated_population            971052 non-null  float64       \n",
+            " 10  city_ibge_code                  971052 non-null  float64       \n",
+            " 11  confirmed_per_100k_inhabitants  957481 non-null  float64       \n",
+            " 12  death_rate                      974824 non-null  float64       \n",
+            "dtypes: bool(1), datetime64[ns](1), float64(5), int64(3), object(3)\n",
             "memory usage: 90.2+ MB\n"
           ],
           "name": "stdout"
@@ -344,7 +350,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ae7fd54e-bcf8-491b-a6e1-a33999eddef4"
+        "outputId": "08d271fd-02a9-4523-f855-1f1cdd10ed45"
       },
       "source": [
         "#Conferindo a alteração do tipo do campo date.\n",
@@ -387,7 +393,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6a9f972a-faea-4286-fd73-5f7dd3597ba1"
+        "outputId": "333f36dd-d436-4f79-e040-f77580ff7ef4"
       },
       "source": [
         "#De acordo com a documentação irei excluir a coluna \"estimated_population_2019\", por possuir valores desatualizados.\n",
@@ -443,7 +449,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "56eecb7f-aa7c-4299-b949-caabc91ea210"
+        "outputId": "3ecbf5db-f26a-476b-858d-d0ba894408e7"
       },
       "source": [
         "dados.head()"
@@ -606,13 +612,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cbwWcW7-TCxf",
-        "outputId": "787b75da-03be-4c7d-8fca-ef7a5f07e90b"
+        "outputId": "6bd574a1-8492-4768-d831-e7051118e687"
       },
       "source": [
         "#Quantidades de linas e colunas do DataFrame\n",
         "dados.shape"
       ],
-      "execution_count": 22,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +630,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 12
         }
       ]
     },
@@ -635,13 +641,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kq9FLL_tUGP8",
-        "outputId": "ac33dc62-62f6-419a-d544-4a5ec24ec454"
+        "outputId": "9dd2850c-a730-477c-dbda-46930b7d037f"
       },
       "source": [
         "#Descrição do Index\n",
         "dados.index"
       ],
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -653,7 +659,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 13
         }
       ]
     },
@@ -664,13 +670,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X878OsqxUaA6",
-        "outputId": "505cf721-715e-4515-9e08-bd5e6fc7ea26"
+        "outputId": "cb91fb3f-af73-413f-e296-243b2bcfaa39"
       },
       "source": [
         "#Colunas Presetes no DataFrame\n",
         "dados.columns"
       ],
-      "execution_count": 24,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -686,7 +692,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 14
         }
       ]
     },
@@ -697,13 +703,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SUumr_fsUp4M",
-        "outputId": "09d75da9-235a-46ec-bb5c-417599150862"
+        "outputId": "1aa196b6-d687-458b-a2f1-f83161a1a71a"
       },
       "source": [
         "#Contagem de Dados Não Nulos\n",
         "dados.count()"
       ],
-      "execution_count": 25,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +734,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 15
         }
       ]
     },
@@ -739,13 +745,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKNSUod6aQcf",
-        "outputId": "b3910f2a-654e-448d-c8e4-ec61f05fe4bb"
+        "outputId": "d487a91d-8696-43bc-f1bb-7df5b22712d3"
       },
       "source": [
         " #Informação sobre o período de tempo do DataFrame\n",
         " dados.date.max()-dados.date.min()"
       ],
-      "execution_count": 38,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,7 +763,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 16
         }
       ]
     },
@@ -769,7 +775,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     }
   ]
